# uk-autumn-budget-dashboard

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  STUDENT_LOAN_REFORM_SUMMARY.md  cloudbuild.yaml  docker-compose.yml  eslint.config.mjs  fuel_duty_freeze_analysis.ipynb  index.html  next.config.ts  package-lock.json  package.json  poverty-analysis.ipynb  pyproject.toml  rail_fare_structural_reform_copy.ipynb  salary_sacrifice_cap_analysis_copy.ipynb  salary_sacrifice_cap_reform.ipynb  test_student_loan_reform.py  tsconfig.json  vitest.config.ts  zero_vat_energy_reform_final.ipynb
.beads/: deletions.jsonl  issues.jsonl
.claude/: AGENTS.md  CLAUDE.md
.vercel/: project.json
analysis/: README.md  create_data.py  debug_uc_benefits.py  income_curve_data.csv  income_source_tax_reforms_results.txt  test_gini.py  test_gini_only.py  test_gini_poverty.py  test_gini_poverty_simple.py  test_gini_poverty_v2.py  test_gini_variables.py  test_income_curve.py  test_income_curve_simple.py  test_income_source_tax_reforms.py  test_modifications.py  test_poverty_weighted.py  test_salary_sacrifice.py  two_child_limit_reform.py
data_inputs/: constituencies_2024.csv  obr_estimates.csv
scripts/: constituency_validation_report.txt  data_sources.json  data_sources_guide.py  generate_blog_charts.py  generate_combined_charts.py  sample_household_scatter.py  validate_constituency_data.py
src/: App.css  App.jsx  index.css
tests/: __init__.py  test_api_url.py  test_calculators.py  test_cli.py  test_models.py  test_personal_impact.py  test_pipeline.py  test_reforms.py
(+162 files in other folders)
